crates/parser/tests/parse/annotations-malformed.snap
---
source: crates/parser/tests/parse.rs
---
ROOT@0..129
  ANNOT_START@0..3 "(@a"
  WHITESPACE@3..4 " "
  ANNOT_ELEM@4..10 "Heiße"
  WHITESPACE@10..11 " "
  ANNOT_ELEM@11..21 "Würstchen"
  ANNOT_END@21..22 ")"
  WHITESPACE@22..23 "\n"
  ANNOT_START@23..26 "(@a"
  WHITESPACE@26..27 " "
  ANNOT_ELEM@27..33 "\u{f61a}\u{f4a9}"
  ANNOT_END@33..34 ")"
  WHITESPACE@34..35 "\n"
  ERROR@35..36 "("
  WHITESPACE@36..37 " "
  ERROR@37..39 "@a"
  ERROR@39..40 ")"
  WHITESPACE@40..41 "\n"
  ANNOT_START@41..43 "(@"
  ANNOT_END@43..44 ")"
  WHITESPACE@44..45 "\n"
  ANNOT_START@45..47 "(@"
  WHITESPACE@47..48 " "
  ANNOT_END@48..49 ")"
  WHITESPACE@49..50 "\n"
  ANNOT_START@50..52 "(@"
  WHITESPACE@52..53 " "
  ANNOT_ELEM@53..54 "x"
  ANNOT_END@54..55 ")"
  WHITESPACE@55..56 "\n"
  ANNOT_START@56..58 "(@"
  ANNOT_ELEM@58..59 "("
  ANNOT_ELEM@59..61 "@a"
  ANNOT_ELEM@61..62 ")"
  ANNOT_ELEM@62..63 "x"
  ANNOT_END@63..64 ")"
  WHITESPACE@64..65 "\n"
  ANNOT_START@65..69 "(@\"\""
  ANNOT_END@69..70 ")"
  WHITESPACE@70..71 "\n"
  ANNOT_START@71..73 "(@"
  WHITESPACE@73..74 " "
  ANNOT_ELEM@74..77 "\"a\""
  ANNOT_END@77..78 ")"
  WHITESPACE@78..79 "\n"
  ANNOT_START@79..82 "(@x"
  ANNOT_END@82..83 ")"
  ERROR@83..84 ")"
  WHITESPACE@84..85 "\n"
  ANNOT_START@85..88 "(@x"
  WHITESPACE@88..89 " "
  ANNOT_ELEM@89..90 "("
  ANNOT_ELEM@90..91 ")"
  ANNOT_END@91..92 ")"
  ERROR@92..93 ")"
  WHITESPACE@93..94 "\n"
  ANNOT_START@94..97 "(@x"
  WHITESPACE@97..98 " "
  ANNOT_ELEM@98..99 "("
  ANNOT_ELEM@99..100 "y"
  WHITESPACE@100..101 " "
  ANNOT_ELEM@101..102 "("
  ANNOT_ELEM@102..103 "z"
  ANNOT_ELEM@103..104 ")"
  ANNOT_ELEM@104..105 ")"
  ANNOT_END@105..106 ")"
  ERROR@106..107 ")"
  WHITESPACE@107..108 "\n"
  ANNOT_START@108..111 "(@x"
  WHITESPACE@111..112 " "
  ANNOT_ELEM@112..113 "("
  ANNOT_ELEM@113..115 "@y"
  WHITESPACE@115..116 " "
  ANNOT_ELEM@116..117 ")"
  ANNOT_END@117..118 ")"
  ERROR@118..119 ")"
  WHITESPACE@119..120 "\n"
  ERROR@120..121 "("
  ANNOT_START@121..124 "(@a"
  ANNOT_END@124..125 ")"
  ERROR@125..127 "@b"
  ERROR@127..128 ")"
  WHITESPACE@128..129 "\n"

error: unexpected token
  ┌─ annotations-malformed.wat:3:3
  │
3 │ ( @a)
  │   ^^

error: unexpected token
  ┌─ annotations-malformed.wat:3:5
  │
3 │ ( @a)
  │     ^

error: unexpected token
   ┌─ annotations-malformed.wat:10:5
   │
10 │ (@x))
   │     ^

error: unexpected token
   ┌─ annotations-malformed.wat:11:8
   │
11 │ (@x ()))
   │        ^

error: unexpected token
   ┌─ annotations-malformed.wat:12:13
   │
12 │ (@x (y (z))))
   │             ^

error: unexpected token
   ┌─ annotations-malformed.wat:13:11
   │
13 │ (@x (@y )))
   │           ^

error: unexpected token
   ┌─ annotations-malformed.wat:14:6
   │
14 │ ((@a)@b)
   │      ^^

error: unexpected token
   ┌─ annotations-malformed.wat:14:8
   │
14 │ ((@a)@b)
   │        ^
